--- a/Verkefni-3/Barnes.css
+++ b/Verkefni-3/Barnes.css
@@ -3,17 +3,17 @@
 
 }
 body{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     max-width:50em;
     padding: 2em;
     margin:  2em auto;
-    background: linear-gradient(darkgrey,crimson)
+    background: linear-gradient(red,lightblue);
+    font-family: 'Coiny', cursive;
 }
 /* grid-area */
 header{
     grid-area: header;
     text-align: center;
-    color: navy;
+    color:  black;
 }
 .topnav{
     grid-area: topnav;
@@ -25,34 +25,35 @@ footer{
     grid-area: footer;
 }
 /* content */
+.buckyyo{
+    border: 3px solid black;
+}
 .art{
     grid-area: article;
-    color: navy;
+    color: black;
 }
 .a1{
     grid-area: aside1;
-    color: navy;
+    color: black;
 }
 .a2{
     grid-area: aside2;
-    color: navy;
- 
+    color: black;
 }
 /* grid template area */
 body{
     display: grid;
     grid-gap: 0;
     grid-template-areas:
-    "topnav"
-    "header"
-    "content"
-    "footer";
-    max-width:60em;
+    "topnav""topnav"
+    "header""content"
+    "footer""footer";
+    max-width: 60em;
     margin: 0 auto;
 }
 .content{
     display: grid;
-    grid-gap: 4em;
+    grid-gap: 6em;
     grid-template: 
     "aside1 article aside2";
     grid-template-columns: 1fr 3fr 1fr;
@@ -62,7 +63,9 @@ body{
     flex-flow: row wrap;
     justify-content: space-around;
     list-style-type: none;
+    margin: 4em;
 }
-.topmenu li{ 
-    padding: 0.1em
+.topmenu, li{
+    padding:3em;
+    border: 3px solid black
 }
