--- a/Verkefni-3/fury.css
+++ b/Verkefni-3/fury.css
@@ -5,14 +5,22 @@ body{
     max-width:50em;
     padding: 2em;
     margin: 2em auto;
-    background: linear-gradient(lightblue,lightgreen)
+    background: linear-gradient(lightblue,lightgreen);
 }
 /*grid-area*/
 header{
     grid-area: header;
     font-family: 'ZCOOL QingKe HuangYou', cursive;
+    font-weight: 300;
+    font-size: 14px;
     text-align: center;
     color: black;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 1em;
+    margin: 4em;
+
 }
 .topnav{
     grid-area: topnav;
@@ -27,7 +35,7 @@ header{
 .art{
     grid-area: article;
     color: black;
-    font-family: 'Fredericka the Great', cursive;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .a1{
     grid-area: aside1;
@@ -44,16 +52,16 @@ body{
     display: grid;
     grid-gap: 0;
     grid-template-areas: 
-    "topnav"
     "header"
+    "topnav"
     "content"
     "footer";
-    max-width: 60em;
+    max-width: 80em;
     margin: 0em auto;
 }
 .content{
     display: grid;
-    grid-gap: 4em;
+    grid-gap: 6em;
     grid-template:
     "aside1 article aside2";
     grid-template-columns: 1fr 3fr 1fr; 
@@ -63,7 +71,13 @@ body{
     flex-flow: row wrap;
     justify-content: space-around;
     list-style-type: none;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 1em;
+    margin: 4em;
 }
-.topmenu li{
-    padding:0.1;
+.topmenu{
+    margin-top: 2em;
+    border: 3px solid lightcyan;
 }
